--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@
 
 # Main menu navigation
 menu:
-  Home: /
-  Archives: /archives
-  Tags: /tags
-  Categories: /categories
+  Home: https://cainiaowulawula.github.io/GQQ.github.io/
+#  Archives: /archives
+#  Tags: /tags
+#  Categories: /categories
   #XXX: /xxx
 
 # Favicon
